fix(docs): don't overflow content in examples

--- a/assets/styles/docs.less
+++ b/assets/styles/docs.less
@@ -201,6 +201,7 @@ body {
    ------- */
 .example {
   position: relative;
+  overflow: hidden;
   margin-bottom: @margin-base-y;
   padding: ( @padding-base-y + .6rem + unit( @line-height-base, rem ) ) @padding-base-x @padding-large-y;
   border: 1px solid @gray-light-2;
